practice-exam-tracker-sfdx/ooo-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <label>Question</label>
    <nameField>
        <displayFormat>Q{YY}{MM}{0}</displayFormat>
        <label>Question Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>