practice-exam-tracker-sfdx/ooo-app/main/default/objects/Question__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the question can be used. If unchecked (false), this indicates that the question is either in development and shouldn&#39;t be used until marked active, or the question is outdated and has been deactivated to prevent further use.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>