practice-exam-tracker-sfdx/ooo-app/main/default/objects/Question__c/fields/Point_Value__c.field-meta.xml
<CustomField>
    <fullName>Point_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of points that this question is worth. This will be used to determine the grade of an answer to this question.</description>
    <label>Point Value</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>