practice-exam-tracker-sfdx/ooo-app/main/default/objects/Question__c/fields/Question_Detail__c.field-meta.xml
<CustomField>
    <fullName>Question_Detail__c</fullName>
    <label>Question Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>