practice-exam-tracker-sfdx/ooo-app/main/default/objects/Question__c/fields/Question_Topic__c.field-meta.xml
<CustomField>
    <fullName>Question_Topic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question Topic</label>
    <referenceTo>Question_Topic__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>