practice-exam-tracker-sfdx/ooo-app/main/default/objects/Question__c/fields/Subtopic__c.field-meta.xml
<CustomField>
    <fullName>Subtopic__c</fullName>
    <label>Subtopic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Topic1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Question_Subtopics</valueSetName>
    </valueSet>
</CustomField>