practice-exam-tracker-sfdx/ooo-app/main/default/objects/Question__c/fields/Topic1__c.field-meta.xml
<CustomField>
    <fullName>Topic1__c</fullName>
    <label>Topic</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Question_Topics</valueSetName>
    </valueSet>
</CustomField>